tests/compiler/test_files/keyword_identifiers.swift
// error

var func = 5